src/index.css
/* autoprefixer grid: autoplace */

/*Defaults for root properties - these should get overridden atm*/
:root{
  --grid-x-num:3;
  --grid-y-num:3;
  --grid-square-width:30vh;
  --grid-square-height:26vh;
}

body, html {
    margin: 0px;
    padding: 0px
}

body{
  font: 14px "Century Gothic", Futura, sans-serif;
}

/*ol, ul {
  padding-left: 30px;
}*/

#game {
  padding:1em;
  display: grid;
  grid-template-columns: auto;
  grid-template-rows: auto;
  text-align:center;
  min-height: calc(100vh - 2em);
}

body.MSIE #game{
  display:block;
}

body:not(.MSIE) #game.withSidebar{
  grid-template-columns: auto 300px;
  grid-template-rows: auto;
}

body.MSIE #game.withSidebar #game-board-container {
  width:calc(100% - 300px);
}

body.MSIE #game.withSidebar .game-info {
  position:fixed;
  width:280px;
  height:100vh;
  top:0px;
  right:0px;
}

#game-board-container{
  text-align:center;
  max-height:100vh;
}

.board{
  width:auto;
  height:auto;
  padding-top:8vh;
  display:inline-grid;
  grid-template-columns:repeat(var(--grid-x-num), var(--grid-square-width));
  grid-template-rows:repeat(var(--grid-y-num), var(--grid-square-height));
}

.status {
  margin-bottom: 10px;
}

.squareBtn {
  width:100%;
  height:100%;
  background-color:white;
  font-size:40px;
  border:0px;
}

.squareWrapper {
  border-top: 8px solid black;
  border-left: 8px solid black;
}

.squareWrapper.rowStart{
  grid-row-start: auto;
  border-left: 0px;
}

.squareWrapper.colTop{
  grid-column-start: auto;
  border-top: 0px;
}

.square:focus {
  outline: none;
}

.kbd-navigation .square:focus {
  background: #ddd;
}

.game-info {
  padding:10px;
  border-left:4px solid black;
  grid-column: 2;
}

.playPiece{
  margin:0 auto;
  display:block;
  height:calc(var(--grid-square-height) * 0.5);
  width:calc(var(--grid-square-width) * 0.5);
}

#playStatus{
  margin: 0 auto;
  max-width:800px;
}

#playStatus hr{
  margin-top:2em;
  margin-bottom:1em;
  border: 0px;
  height: 2px;
  background-image: linear-gradient(90deg, whitesmoke, grey, black, grey, whitesmoke);
}

#playStatus .status-msg{
  font-size:2em;
  margin:10px;
}

#playStatus #reset-btn{
  float:right;
  background:transparent;
  border:0px;
}

#playStatus #reset-btn:hover{
  cursor: pointer;
}

#playStatus #reset-btn img{
  width: 4em;
  height: 4em;
}

